--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Heroku environmental variables, including API keys.
 # https://devcenter.heroku.com/articles/config-vars
 .env
+.pgpass
 
 # npm packages
 node_modules
